# clintegrate

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
Clintegrate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Distutils.egg-info/: PKG-INFO  top_level.txt
predictors/: .constants.py.swp  Exceptions.py  InregrativePredictiveModel.py  PartialHazardPredictor.py
predictors/Clintegrate.egg-info/: PKG-INFO  top_level.txt
predictors/data/sequences/: APOB_38.json  BRCA1_38.json  BRCA2_38.json
predictors/example_data/: BRCA2.csv
src/: __init__.py
src/clintegrate/: __init__.py
src/clintegrate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/clintegrate/predictors/: Exceptions.py  IntegrativePredictiveModel.py  __init__.py  risk.py  tools.py  vep_parser.py
src/clintegrate/predictors/data/sequences/: LDLR_38.json  PCSK9_38.json
src/clintegrate/predictors/example_data/: APOB.csv  BRCA1.csv  LDLR.csv  PCSK9.csv
src/clintegrate/predictors/precomputed_snp_values/: PCSK9.csv  clean_precomputed.py
