[metadata]
name = clintegrate
version = 1.0.3
author_email = jamesdavidfife@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
package_dir =
  = src
packages = find:
python_requires = >= 3.7
include_package_data = True

[options.packages.find]
where = src
